tests/ui/errors/snapshots/infer_cross_module_tuple_struct_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot use native constructor as a value
   ╭─[main.lis:5:11]
 4 │ fn main() {
 5 │   let f = util.P
   ·           ───┬──
   ·              ╰── native constructors must be called directly
 6 │   let _ = f
   ╰────
  help: Use a closure instead: `|args| util.P(args)` · code: [infer.native_constructor_value]
