tests/ui/errors/snapshots/infer_cross_package_record_struct_as_value.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Cannot use struct type as a value
   ╭─[main.lis:5:11]
 4 │ fn main() {
 5 │   let p = util.Point
   ·           ─────┬────
   ·                ╰── struct types cannot be used as expressions
 6 │   let _ = p
   ╰────
  help: Use a struct literal instead: `util.Point { field: value, ... }` · code: [infer.record_struct_value]
