tests/ui/errors/snapshots/infer_cross_package_static_method_shortened_type_args_rejected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Wrong type argument count
   ╭─[main.lis:5:34]
 4 │ fn main() {
 5 │   let y: string = util.Box.choose<string>(1)
   ·                                  ────┬───
   ·                                      ╰── expected `<T, U>`, found `<string>`
 6 │   let _ = y
   ╰────
  help: This type expects 2 type parameters but received 1 type parameter · code: [infer.type_arg_count_mismatch]
