tests/ui/errors/snapshots/infer_defer_in_block_as_function_argument.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `defer`
   ╭─[test.lis:5:13]
 4 │ fn f() {
 5 │   consume({ defer cleanup() });
   ·             ───────┬───────
   ·                    ╰── produces no value
 6 │ }
   ╰────
  help: Move `defer` to its own statement · code: [infer.defer_in_expression_position]
