tests/ui/errors/snapshots/infer_defer_in_let_binding.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `defer`
   ╭─[test.lis:4:11]
 3 │ fn f() {
 4 │   let x = defer cleanup();
   ·           ───────┬───────
   ·                  ╰── produces no value
 5 │ }
   ╰────
  help: Move `defer` to its own statement · code: [infer.defer_in_expression_position]
